# narrative-state-engine

./: .env.example  .gitignore  AGENTS.md  README.md  howtodo.md  pyproject.toml  run_formal_continuation.bat  run_novel_continuation.py
docs/: 00_source_alignment.md  01_architecture.md  03_state_schema.md  04_workflow.md  05_mvp_tables.md  06_roadmap.md  07_llm_logging_integration.md  08_architecture_usage.md  09_code_api.md  10_runtime_io_audit.md  13_full_change_record.md  14_release_notes_technical.md  15_core_design_and_execution_deep_dive.md  16_memory_rag_author_planning_design.md  17_narrative_domain_concept_model.md  19_local_pgvector_database_setup.md  20_end_to_end_retrieval_pipeline.md  21_project_usage_and_completion_guide.md  23_task_level_llm_analysis_continuation_plan.md  24_local_web_workbench.md  25_deepseek_v4_runtime_tuning.md  26_task_scoped_run_flow.md
notebooks/: TASK_20260504_SERIES_001_WORKFLOW.md  towrite
sql/: mvp_schema.sql
tests/: test_agent_runtime_job_bridge.py  test_agent_runtime_mock_image_scenario.py  test_agent_runtime_novel_adapter.py  test_agent_runtime_scenario_registry.py  test_analysis_analyzer.py  test_analysis_chunker.py  test_analysis_repository_memory.py  test_audit_assistant.py  test_author_input_and_retrieval_evaluation.py  test_author_planning_phase_two.py  test_author_planning_workflow.py  test_chapter_orchestrator.py  test_chinese_retrieval_terms.py  test_cli_analyze_task.py  test_config_env_loading.py  test_dialogue_actions.py  test_dialogue_first_runtime.py  test_dialogue_runtime_llm_planner.py  test_graph_view.py  (+31 more)
(+379 files in other folders)
