[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "narrative-state-engine"
version = "0.1.0"
description = "State-first, memory-first agent architecture for novel continuation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2",
  "pydantic>=2.7",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "pgvector>=0.3",
  "python-dotenv>=1.0",
  "openai>=1.40",
  "loguru>=0.7",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
web = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
]

[project.scripts]
narrative-state-engine = "narrative_state_engine.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
